get some workers/badges
