# controllers/workers.js
@@ -1,5 +1,6 @@
 const utilities = require('../utilities/utilities')
 const worker = require("../models/workers");
+const badge = require("../models/badges");
 const bcrypt = require('bcrypt');
 
 
@@ -132,10 +133,35 @@ const removeBadge = (req, res) => {
     })
 }
 
+const getSomeBadges = (req, res) => {
+    worker.findById(req.params.id).select('workers')
+    .then((result) => {
+        if (result) {
+            badge.find({
+                _id: {
+                    $in: result.badges
+                }}).then((workers) => {
+                if(workers) {
+                    res.status(200).json(workers);
+                } else {
+                    res.status(404).send('not found')
+                }
+            }).catch((err) => {
+                res.status(400).send('error')
+            })
+        } else {
+            res.status(404).send('not found')
+        }
+    }).catch((err) => {
+        res.status(400).send('error')
+    })
+}
+
 exports.login = login; 
 exports.addBadge = addBadge;
 exports.removeBadge = removeBadge;
 exports.getAllWorkers = getAllWorkers;
+exports.getSomeBadges = getSomeBadges;
 exports.getOneWorker = getOneWorker;
 exports.updateWorker = updateWorker;
 exports.deleteWorker = deleteWorker;
