# routes/projects.js
@@ -31,4 +31,8 @@ router.put('/:id/removeWorker', (req, res) => {
     controller.removeWorker(req, res)
 })
 
+router.get('/:id/workers', ( req, res) => {
+    controller.getSomeWorkers(req,res);
+})
+
 module.exports = router
