# swagger.json
@@ -58,15 +58,9 @@
                     "manager": {
                         "type": "string"
                     }, 
-                    "workers": {
-                        "type":"object",
-                        "properties":{ 
-                            "id": {
-                                "type": "string"
-                            }
-                        },
-                        "required": ["id"]
-                    }
+                    "workers": [
+                        "string"
+                    ]
                 }
             },
             "Task": {
@@ -103,15 +97,9 @@
                     "desc": {
                         "type": "string"
                     },
-                    "workers": {
-                        "type":"object",
-                        "properties":{ 
-                            "id": {
-                                "type": "string"
-                            }
-                        },
-                        "required": ["id"]
-                    }
+                    "workers": [
+                        "string"
+                    ]
                 }
             },
             "Worker": {
@@ -130,15 +118,9 @@
                     "email": {
                         "type": "string"
                     }, 
-                    "badges": {
-                        "type": "object",
-                        "required": ["id"],
-                        "properties": {
-                            "id": {
-                                "type": "string"
-                            }
-                        }
-                    }, 
+                    "badges": [
+                        "string"
+                    ], 
                     "tasksDone": {
                         "type": "integer"
                     }, 
@@ -888,6 +870,98 @@
                 }]
             }
         },
+        "/workers/{id}/badges": {
+            "get": {
+                "description": "Get one worker's badges",
+                "tags": ["workers"],
+                "parameters": [
+                    {
+                      "name": "id",
+                      "in": "path",
+                      "description": "ID of worker to use",
+                      "required": true,
+                      "schema": {
+                        "type": "string"
+                      }
+                    }],
+                "responses": {
+                    "200": {
+                        "description": "Project info",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#components/schemas/Worker"
+                                },
+                                "examples": {
+                                    "Worker List": 
+                                        {
+                                            "_id": "5fac346470a04c174c2e121f",
+                                            "name": "Grupo1",
+                                            "manager_id": "63b96a15adfdee5320021052",
+                                            "client_id": "63b96a15adfdee5320021053",
+                                            "badges": [ "63b96a15adfdee55467892", "63b96a15adfdee55467892"],
+                                            "desc": "testing"
+                                        }
+                                }
+                            },
+                            "text/plain": {
+                                "schema": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Error",
+                        "content": {
+                            "text/plain": {
+                                "schema": {
+                                    "type": "string"
+                                },
+                                "examples": {
+                                    "Error": {
+                                        "value": "Error"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Not Authorized",
+                        "content": {
+                            "text/plain": {
+                                "schema": {
+                                    "type": "string"
+                                },
+                                "examples": {
+                                    "Unauthorized": {
+                                        "value": "Not Authorized"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not found",
+                        "content": {
+                            "text/plain": {
+                                "schema": {
+                                    "type": "string"
+                                },
+                                "examples": {
+                                    "Unauthorized": {
+                                        "value": "Not found"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [{
+                    "bearer": []
+                }]
+            }
+        },
 
         "/teams/create": {
             "post": {
@@ -1519,6 +1593,101 @@
                     },
                     "404": {
                         "description": "Not found",
+                        "content": {
+                            "text/plain": {
+                                "schema": {
+                                    "type": "string"
+                                },
+                                "examples": {
+                                    "Unauthorized": {
+                                        "value": "Not found"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [{
+                    "bearer": []
+                }]
+            }
+        },
+        "/teams/{id}/workers": {
+            "get": {
+                "description": "Get one Team's workers",
+                "tags": ["team"],
+                "parameters": [
+                    {
+                      "name": "id",
+                      "in": "path",
+                      "description": "ID of team to use",
+                      "required": true,
+                      "schema": {
+                        "type": "string"
+                      }
+                    }],
+                "responses": {
+                    "200": {
+                        "description": "Team info",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#components/schemas/Team"
+                                },
+                                "examples": {
+                                    "Team List": 
+                                        {
+                                            "_id": "5fac346470a04c174c2e121f",
+                                            "title": "Grupo1",
+                                            "manager_id": "63b96a15adfdee5320021052",
+                                            "workers": [{
+                                                "id": "63b96a15adfdee55467892"
+                                            },{
+                                                "id": "63b96a15adfdee55467892"
+                                            }],
+                                            "desc": "testing"
+                                        }
+                                }
+                            },
+                            "text/plain": {
+                                "schema": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Error",
+                        "content": {
+                            "text/plain": {
+                                "schema": {
+                                    "type": "string"
+                                },
+                                "examples": {
+                                    "Error": {
+                                        "value": "Error"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Not Authorized",
+                        "content": {
+                            "text/plain": {
+                                "schema": {
+                                    "type": "string"
+                                },
+                                "examples": {
+                                    "Unauthorized": {
+                                        "value": "Not Authorized"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Error",
                         "content": {
                             "text/plain": {
                                 "schema": {
@@ -2583,6 +2752,98 @@
                     },
                     "404": {
                         "description": "Not found",
+                        "content": {
+                            "text/plain": {
+                                "schema": {
+                                    "type": "string"
+                                },
+                                "examples": {
+                                    "Unauthorized": {
+                                        "value": "Not found"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [{
+                    "bearer": []
+                }]
+            }
+        },
+        "/projects/{id}/workers": {
+            "get": {
+                "description": "Get one project's workers",
+                "tags": ["project"],
+                "parameters": [
+                    {
+                      "name": "id",
+                      "in": "path",
+                      "description": "ID of project to use",
+                      "required": true,
+                      "schema": {
+                        "type": "string"
+                      }
+                    }],
+                "responses": {
+                    "200": {
+                        "description": "Project info",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#components/schemas/Project"
+                                },
+                                "examples": {
+                                    "Project List": 
+                                        {
+                                            "_id": "5fac346470a04c174c2e121f",
+                                            "name": "Grupo1",
+                                            "manager_id": "63b96a15adfdee5320021052",
+                                            "client_id": "63b96a15adfdee5320021053",
+                                            "workers": [ "63b96a15adfdee55467892", "63b96a15adfdee55467892"],
+                                            "desc": "testing"
+                                        }
+                                }
+                            },
+                            "text/plain": {
+                                "schema": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Error",
+                        "content": {
+                            "text/plain": {
+                                "schema": {
+                                    "type": "string"
+                                },
+                                "examples": {
+                                    "Error": {
+                                        "value": "Error"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Not Authorized",
+                        "content": {
+                            "text/plain": {
+                                "schema": {
+                                    "type": "string"
+                                },
+                                "examples": {
+                                    "Unauthorized": {
+                                        "value": "Not Authorized"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Error",
                         "content": {
                             "text/plain": {
                                 "schema": {
